Migrate constants to lowerCamelCase and enforce style via Spotless
Renames every static-final field and enum constant to lowerCamelCase across both modules, restores external-library member references the mechanical pass mangled (taffy factories/constants, Either.left, Math.clamp), and replaces stray fully-qualified names with imports.

Nimbus gains a plugin surface mirroring CloudLib's: NimbusPlugin / NimbusClientPlugin are discovered through @PluginMarker and dispatched at load-complete; built-in features register through NimbusBuiltinPlugin instead of the mod constructor.

The shared rules live in a new convention plugin: cloudlang-plugin now ships dev.vfyjxf.cloudlib.style, which wires Spotless with palantir-java-format, import ordering, unused-import removal, and a lowerCamelConstants lint step that fails the build on UPPER_SNAKE constants instead of rewriting them.